--- a/crossplatform-app/knee-rom/src/pages/Tab1.css
+++ b/crossplatform-app/knee-rom/src/pages/Tab1.css
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  padding-bottom: 64px;
   height: 100%;
   flex-direction: column;
 }
